--- a/CoffeeShop.vcxproj.filters
+++ b/CoffeeShop.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClCompile Include="GeneralFuncs.h">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Order.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="GeneralFuncs.cpp">
